--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mywebsite.com",
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
@@ -27,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-snap": "^1.23.0"
   }
 }
